# ralph-beads

./: .gitignore  CLAUDE.md  LICENSE  README.md  TESTING.md
.beads/: issues.jsonl
.claude-plugin/: marketplace.json  plugin.json
.opencode/plugin/: beads-client.test.ts  beads-client.ts  prompts.ts  ralph-beads.ts  rust-client.ts  types.ts
commands/: ralph-beads.md  ralph-cancel.md  ralph-runner.sh  ralph-status.md
docs/: ENHANCEMENT_PLAN.md  architecture.md  comparison.md  examples.md
ralph-beads-cli/: Cargo.toml  README.md
ralph-beads-cli/src/: activity.rs  beads_state.rs  complexity.rs  framework.rs  gates.rs  health.rs  iterations.rs  lint.rs  main.rs  memory.rs  merge_slot.rs  preflight.rs  security.rs  state.rs  swarm.rs  worktree.rs
scripts/: check-deps.sh  safe-sync.sh
specs/: README.md  beads-integration.md  commands.md  core-workflow.md  loop-architecture.md  validation.md
tests/: e2e-opencode.sh  lint-prompt-embedded.sh  run-tests.sh  verify-complexity.sh  verify-safety.sh
