[package]
name = "ralph-beads-cli"
version = "0.1.0"
edition = "2021"
description = "Rust CLI helper for ralph-beads plugin"
license = "MIT"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.11"
thiserror = "2.0"

[dev-dependencies]
tempfile = "3.15"

[profile.release]
lto = true
codegen-units = 1
strip = true
